# openclaw-desktop

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
