[package]
name = "openclaw-desktop"
version = "0.1.0"
description = "OpenClaw Desktop - A GUI for OpenClaw AI Assistant"
authors = ["ai-dev-2024"]
edition = "2021"

[lib]
name = "openclaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
opener = "0.8.4"
dirs = "5"
urlencoding = "2"
